--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+
 <head>
-    <title>HI</title>
+    <title>Task1</title>
+    <style>
+        .button {
+            border: none;
+            color: black;
+            padding: 16px 32px;
+            text-align: center;
+            display: inline-block;
+            font-size: 30px;
+            margin: 4px 2px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+            background-color: rgb(255, 174, 0);
+
+        }
+        .button:hover {
+            background-color: #e67003;
+            color: white;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>HI</h1>
-    <h2>My Name is Fedaa</h2>
-    <p>hello there</p>
+    <div style="text-align: center; margin: 200px;">
+         <button type="button" class="button" onclick="print()">Click Me!</button>
+    </div>
+
+    <script>
+        function print() {
+            console.log("Hello World!");
+        }
+    </script>
 </body>
-</html>
